cmake_minimum_required(VERSION 3.17)
project(untitled7)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled7 src/main.cpp src/crew/crew.cpp src/crew/crew.h src/Fields/Field.cpp src/Fields/Field.h src/Units/Worker.cpp src/Units/Worker.h src/Units/Master.cpp src/Units/Master.h src/Units/Unit.cpp src/Units/Unit.h)